# evol-mod-scripting

./: .gitignore  meson.build  module.lua
include/: script_common.h
include/misc/: func_wrappers.h
meta/: evmod.namespaces  evmod.types
src/: evol_api.lua  mod.c
src/collision_callbacks/: collision_callbacks.c  collision_callbacks.h
